Fixed cut off pie chart legend text

--- a/static/_sass/_custom.scss
+++ b/static/_sass/_custom.scss
@@ -247,7 +247,7 @@ Homepage Infographic Sections
     width: 400px;
     float: center;
     svg {
-        width: 400px;
+        width: 410px; //Controlls width of pie chart graphic
     }
 }
 
